Super-quick patch for fixing the header from blocking the content underneath. We should apply this using our z-index tree in the near future, but this should stop the breakage in the interim.

--- a/client/signup/header/style.scss
+++ b/client/signup/header/style.scss
@@ -6,6 +6,7 @@
 	right: 0;
 	left: 0;
 	padding-top: 16px;
+	z-index: -1;
 
 	.wordpress-logo {
 		height: 240px;
